# BubiC-8801MA

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: Linux_arm64.yml  Linux_x86_64.yml  Windows.yml  macOS_Universal.yml
assets/: AppIcon.icns  Info.plist  app.rc.in
assets/AppIcon.icon/: icon.json
assets/linux/: bubic-8801ma.desktop.in
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
src/: common.cpp  common.h  config.cpp  config.h  debugger.cpp  emu.cpp  emu.h  fifo.cpp  fileio.cpp  msvc_compat.h  stdafx.cpp  stdafx.h
src/sdl3/: main.cpp  osd.cpp  osd.h
src/vm/: ay_3_891x.cpp  ay_3_891x.h  disk.cpp  event.cpp  event.h  i8255.cpp  pc80s31k.h  pioflow_log.cpp  pioflow_log.h  upd765a.cpp  upd765a.h  vm_template.h  ym2151.cpp  ym2151.h  ym2203.cpp  ym2203.h
src/vm/fmgen/: fmgen.cpp  fmgen.h  fmtimer.cpp  fmtimer.h  headers.h  opm.cpp  opm.h  opna.cpp  opna.cpp.utf8  opna.h  psg.cpp  psg.h
src/vm/pc8801/: .!92047!pc88.cpp  diskio.cpp  pc88.cpp  pc88.h  pc8801.cpp  pc8801.h
